<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">YTPlayer</string>
    <string name="tandt">Terms and conditions? <a href="google.com">Read more</a></string>
    <string name="title_activity_demo">demo</string>
    <string name="title_home">History</string>
    <string name="title_dashboard">Search</string>
    <string name="title_notifications">Playlist</string>
    <string name="title_activity_oplayist">OPlayist</string>
    <!-- TODO: Change download link -->
    <string name="updateUri">https://raw.githubusercontent.com/KaustubhPatange/YTPlayer/master/update.json?token=AFIYJLW25WY2HTJCF2R5CPC5L3DCS</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error">Not a stable connection</string>

    <string name="what_to_do_with_ringtone">Saved!  Make this your default ringtone or assign it to a contact?</string>
    <string name="set_default_notification">Saved!  Make this your default notification?</string>

    <string name="make_default_ringtone_button">Make Default</string>
    <string name="choose_contact_ringtone_button">Assign to Contact</string>
    <string name="do_nothing_with_ringtone_button">Close</string>

    <string name="artist_name">Ringdroid artist</string>

    <string name="progress_dialog_loading">Loading…</string>
    <string name="progress_dialog_recording">Recording…</string>
    <string name="progress_dialog_saving">Saving…</string>
    <string name="progress_dialog_cancel">Cancel</string>
    <string name="progress_dialog_stop">Stop</string>

    <string name="menu_save">Save</string>
    <string name="menu_reset">Reset</string>
    <string name="menu_about">About</string>
    <string name="menu_show_all_audio">Show All Audio</string>

    <string name="start_marker">Start marker</string>
    <string name="end_marker">End marker</string>
    <string name="rewind">Rewind</string>
    <string name="ffwd">Fast forward</string>
    <string name="zoom_in">Zoom In</string>
    <string name="zoom_out">Zoom Out</string>
    <string name="save_button">Save</string>

    <string name="start_label">Start:</string>
    <string name="end_label">End:</string>

    <string name="edit_intent">YTPlayer Edit</string>

    <string name="time_seconds">seconds</string>

    <string name="search_edit_box">Search</string>

    <string name="button_start_record_activity">Record New</string>

    <string name="sdcard_readonly">Sorry, the SD Card is mounted as read-only and Ringdroid requires it to be writable.</string>
    <string name="no_sdcard">Sorry, Ringdroid can\'t run unless you have an SD Card inserted.</string>
    <string name="sdcard_shared">Sorry, Ringdroid can\'t run while your handset is mounted as a USB device.</string>

    <string name="button_options">Options</string>
    <string name="about_title">About Ringdroid</string>
    <string name="about_text"><![CDATA[Use Ringdroid to edit MP3, OGG, WAV, AAC, and AMR audio files and create ringtones, alarms, and notifications from them.\n\nTip: copy audio files to your SD card using a USB cable.\n\nTip: tap anywhere on the waveform to start playing at that position.\n\nTip: while playing, tap the word Start or End to quickly set the start and end markers to the current playback time.\n\nVersion %s\n\nDeveloper: Dominic Mazzoni, Nicolas Faralli\nGraphics: Joseph Wain\nSupport and evangelizing: Eugene Koh\nEnhancements: Dan Klufas\n\nRingdroid is free software, distributed under the Apache 2.0 license.  Source code is on github.com/google/ringdroid\n]]></string>

    <string name="choose_contact_title">Assign ringtone to which contact?</string>
    <string name="success_contact_ringtone">Successfully assigned ringtone to:</string>


    <string name="bad_extension_error">Sorry, Ringdroid is not yet able to edit files of type</string>
    <string name="no_extension_error">Sorry, Ringdroid can\'t edit a file if it doesn\'t have an extension like .mp3 or .wav</string>

    <string name="context_menu_edit">Edit</string>
    <string name="context_menu_delete">Delete</string>
    <string name="context_menu_default_ringtone">Set as Default Ringtone</string>
    <string name="context_menu_contact">Assign to Contact</string>
    <string name="context_menu_default_notification">Set as Notification tone</string>
    <string name="save_success_message">Saved!</string>
    <string name="default_ringtone_success_message">Changed default ringtone</string>
    <string name="default_notification_success_message">Changed default notification sound</string>
    <string name="play_error">Unable to play this media file</string>
    <string name="no_unique_filename">Unable to find unique filename</string>
    <string name="record_error">Error recording audio</string>
    <string name="too_small_error">Can\'t save a file that small, try making it longer.</string>
    <string name="write_error">Error writing file</string>
    <string name="read_error">Error reading file</string>

    <string name="no_space_error">Your SD card is full, there is not enough space to save this file.</string>


    <string name="file_save_title">Save As:</string>
    <string name="file_save_button_save">Save</string>
    <string name="file_save_button_cancel">Cancel</string>

    <string name="ringtone_type_label">Type:</string>

    <string name="type_music">Music</string>
    <string name="type_alarm">Alarm</string>
    <string name="type_notification">Notification</string>
    <string name="type_ringtone">Ringtone</string>

    <string name="ringtone_name_label">Name:</string>

    <string name="alert_title_success">Success</string>
    <string name="alert_title_failure">Error</string>
    <string name="alert_ok_button">OK</string>
    <string name="alert_yes_button">Yes, please!</string>
    <string name="alert_no_button">No, thanks.</string>
    <string name="play">play</string>
    <string name="stop">Stop.</string>
    <string name="search">Search</string>


    <string name="combine_two_strings" translatable="false">%1$s | %2$s</string>
    <string name="duration_format" translatable="false"><xliff:g id="hours">%1$s</xliff:g> <xliff:g id="minutes">%2$s</xliff:g></string>
    <string name="durationformatshort" translatable="false"><xliff:g id="format">%2$d:%3$02d</xliff:g></string>
    <string name="durationformatlong" translatable="false"><xliff:g id="format">%1$d:%2$02d:%3$02d</xliff:g></string>
    <string name="ringtone_set">Ringtone set.</string>
    <string name="set_ringtone">Set Ringtone!</string>
    <string name="write_setting_text">Ringtone make requiers permission to \'Write Settings\' in order to set your ringtone.\n After granting permission, try setting your ringtone again.</string>
    <string name="permission_required">Permission required.</string>
    <string name="permission_required_desc">Allow Bell to access your ringtones and music library</string>
    <string name="allow">Allow</string>
    <string name="contacts">Contacts</string>
    <string name="search_library">Search..</string>
    <string name="addplayList">Add to playlist</string>
    <string name="share">Share</string>
    <string name="loop">Loop</string>

</resources>
